css/styles.css
/* ... */
code {
  font-size: 0.875em;
  color: #d63384;
  word-wrap: break-word;
}
a > code {
  color: inherit;
}

kbd {
  padding: 0.2rem 0.4rem;
  font-size: 0.875em;
  color: #fff;
  background-color: #212529;
  border-radius: 0.2rem;
}
kbd kbd {
  padding: 0;
  font-size: 1em;
  font-weight: 700;
}

figure {
  margin: 0 0 1rem;
}

img,
svg {
  vertical-align: middle;
}

table {
  caption-side: bottom;
  border-collapse: collapse;
}

caption {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: #6c757d;
  text-align: left;
}

th {
  text-align: inherit;
  text-align: -webkit-match-parent;
}

thead,
tbody,
tfoot,
tr,
td,
th {
  border-color: inherit;
  border-style: solid;
  border-width: 0;
}

label {
  display: inline-block;
}

button {
  border-radius: 0;
}

button:focus:not(:focus-visible) {
  outline: 0;
}

input,
button,
select,
optgroup,
textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

button,
select {
  text-transform: none;
}

[role=button] {
  cursor: pointer;
}

select {
  word-wrap: normal;
}
select:disabled {
  opacity: 1;
}

[list]::-webkit-calendar-picker-indicator {
  display: none;
}

button,
[type=button],
[type=reset],
[type=submit] {
  -webkit-appearance: button;
}
button:not(:disabled),
[type=button]:not(:disabled),
[type=reset]:not(:disabled),
[type=submit]:not(:disabled) {
  cursor: pointer;
}

::-moz-focus-inner {
  padding: 0;
  border-style: none;
}

textarea {
  resize: vertical;
}

fieldset {
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
}

legend {
  float: left;
  width: 100%;
  padding: 0;
  margin-bottom: 0.5rem;
  font-size: calc(1.275rem + 0.3vw);
  line-height: inherit;
}
@media (min-width: 1200px) {
  legend {
    font-size: 1.5rem;
  }
}
legend + * {
  clear: left;
}

::-webkit-datetime-edit-fields-wrapper,
::-webkit-datetime-edit-text,
::-webkit-datetime-edit-minute,
::-webkit-datetime-edit-hour-field,
::-webkit-datetime-edit-day-field,
::-webkit-datetime-edit-month-field,
::-webkit-datetime-edit-year-field {
  padding: 0;
}

::-webkit-inner-spin-button {
  height: auto;
}

[type=search] {
  outline-offset: -2px;
  -webkit-appearance: textfield;
}

/* rtl:raw:
[type="tel"],
[type="url"],
[type="email"],
[type="number"] {
  direction: ltr;
}
*/
::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-color-swatch-wrapper {
  padding: 0;
}

::-webkit-file-upload-button {
  font: inherit;
}

::file-selector-button {
  font: inherit;
}

::-webkit-file-upload-button {
  font: inherit;
  -webkit-appearance: button;
}

output {
  display: inline-block;
}

iframe {
  border: 0;
}

summary {
  display: list-item;
  cursor: pointer;
}

progress {
  vertical-align: baseline;
}

[hidden] {
  display: none !important;
}

.lead {
  font-size: 1.25rem;
  font-weight: 300;
}

.display-1 {
  font-size: calc(1.625rem + 4.5vw);
  font-weight: 300;
  line-height: 1.2;
}

@media (min-width: 1200px) {
  .display-1 {
    font-size: 5rem;
  }
}

.display-2 {
  font-size: calc(1.575rem + 3.9vw);
  font-weight: 300;
  line-height: 1.2;
}
.search_bar{
  padding: 1% 3%;
  width: 50%;
  border-radius: 27px;
  border: none;
}
@media (min-width: 1200px) {
  .display-2 {
    font-size: 4.5rem;
  }
  .seperate {
    display:  block;
  }
  .together{
    display: flex;
  }
  #search_button{
    color:  yellow;
  }
  .carousel_item{
    display:  flex;
  }
  img.c_image {
    width: 74%;
    border-radius: 50%;
    margin-bottom: 7%;
  }
  svg.svg-inline--fa.fa-arrow-right.fa-w-14 {
    margin-top: 7%;
  }
  svg.svg-inline--fa.fa-arrow-left.fa-w-14 {
    margin-top: 7%;
  }
  #clubs_title{
    font-size: 2rem;
    text-align: left;
    margin-top: 8%;
  }
  p.descrp {
    text-align: left;
  }
  a.result-item {
    text-align: center;
    list-style-type: none;
    background-color: #f2f2f2;
    color: black;
    width: 35%;
    padding: 1% 1%;
    margin-top: 1%;
    border-radius: 33px;
    margin-left: 27%;
    display: block;
  }
  .dot {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
  }
  .active {
  background-color: #717171;
  }
  .slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
  }
  .carousel_item {
    display: none;
  }
  .slide_show{
    color:  grey;
    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
    padding: 3%;
  }
  .lrn {
    margin-bottom: 43%;
  }
  .club_row {
    display: flex;
  }
  .club_box {
    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
    padding: 3%;
    width: 47%;
    margin-top: 7%;
    display: flex;
    margin-left: 1%;
  }
  .together{
    display:  flex;
  }
  svg.svg-inline--fa.fa-chevron-down.fa-w-14 {
    margin-left: 6%;
    margin-top: 1%;
  }
  .club_sec {
    display: block;
  }
  .club_info {
    margin-left: 7%;
    text-align: left;
  }
  img.club_img {
    width: 30%;
  }
  input#club_search {
    padding: 1% 2%;
    width: 50%;
    border: none;
    border-radius: 33px;
    margin-top: 3%;
    margin-left: -49%;
    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
  }

  /* Fading animation */
  .fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
  }

  @-webkit-keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
  }

  @keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
  }
  
}


.display-3 {
  font-size: calc(1.525rem + 3.3vw);
  font-weight: 300;
  line-height: 1.2;
}
@media (min-width: 1200px) {
  .display-3 {
    font-size: 4rem;
  }
}

.display-4 {
  font-size: calc(1.475rem + 2.7vw);
  font-weight: 300;
  line-height: 1.2;
}
@media (min-width: 1200px) {
  .display-4 {
    font-size: 3.5rem;
  }
}

.display-5 {
  font-size: calc(1.425rem + 2.1vw);
  font-weight: 300;
  line-height: 1.2;
}
@media (min-width: 1200px) {
  .display-5 {
    font-size: 3rem;
  }
}
/* ... */

